src/scripting/fluxpp/fluxppParser.cpp

// Generated from fluxpp.g4 by ANTLR 4.13.2


#include "fluxppListener.h"
#include "fluxppVisitor.h"

#include "fluxppParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct FluxppParserStaticData final {
  FluxppParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  FluxppParserStaticData(const FluxppParserStaticData&) = delete;
  FluxppParserStaticData(FluxppParserStaticData&&) = delete;
  FluxppParserStaticData& operator=(const FluxppParserStaticData&) = delete;
  FluxppParserStaticData& operator=(FluxppParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag fluxppParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
std::unique_ptr<FluxppParserStaticData> fluxppParserStaticData = nullptr;

void fluxppParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (fluxppParserStaticData != nullptr) {
    return;
  }
#else
  assert(fluxppParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<FluxppParserStaticData>(
    std::vector<std::string>{
      "program", "flux", "single", "statement", "assignment", "create", 
      "filter", "drop_row", "drop_col", "clamp", "set", "rename", "fill", 
      "assert_statement", "expr", "args"
    },
    std::vector<std::string>{
      "", "'='", "','", "'('", "')'", "'|'", "'^'", "'-'", "'*'", "'/'", 
      "'%'", "'+'", "'<'", "'<='", "'>'", "'>='", "'=='", "'!='", "'as'", 
      "'and'", "'else'", "'drop'", "'let'", "'create'", "'keep'", "'remove'", 
      "'clamp'", "'set'", "'rename'", "'fill'", "'assert'", "'with'", "'or'", 
      "'not'", "'if'", "'in'", "'from'", "'to'", "'null'", "'true'", "'false'", 
      "", "", "", "", "", "", "", "';'"
    },
    std::vector<std::string>{
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "AS", "AND", "ELSE", "DROP", "LET", "CREATE", "KEEP", "REMOVE", 
      "CLAMP", "SET", "RENAME", "FILL", "ASSERT", "WITH", "OR", "NOT", "IF", 
      "IN", "FROM", "TO", "NULL", "TRUE", "FALSE", "ISO_DATETIME", "ISO_DATE", 
      "ISO_TIME", "NUMBER", "STRING_LITERAL", "UNTERMINATED_STRING_LITERAL", 
      "ID", "ENDLINE", "NEWLINE", "WS", "BLOCK_COMMENT", "LINE_COMMENT"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  fluxppParserStaticData = std::move(staticData);
}

}

fluxppParser::fluxppParser(TokenStream *input) : fluxppParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

fluxppParser::fluxppParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  fluxppParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *fluxppParserStaticData->atn, fluxppParserStaticData->decisionToDFA, fluxppParserStaticData->sharedContextCache, options);
}

fluxppParser::~fluxppParser() {
  delete _interpreter;
}

const atn::ATN& fluxppParser::getATN() const {
  return *fluxppParserStaticData->atn;
}

std::string fluxppParser::getGrammarFileName() const {
  return "fluxpp.g4";
}

const std::vector<std::string>& fluxppParser::getRuleNames() const {
  return fluxppParserStaticData->ruleNames;
}

const dfa::Vocabulary& fluxppParser::getVocabulary() const {
  return fluxppParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView fluxppParser::getSerializedATN() const {
  return fluxppParserStaticData->serializedATN;
}


//----------------- ProgramContext ------------------------------------------------------------------

fluxppParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

fluxppParser::FluxContext* fluxppParser::ProgramContext::flux() {
  return getRuleContext<fluxppParser::FluxContext>(0);
}

fluxppParser::SingleContext* fluxppParser::ProgramContext::single() {
  return getRuleContext<fluxppParser::SingleContext>(0);
}


size_t fluxppParser::ProgramContext::getRuleIndex() const {
  return fluxppParser::RuleProgram;
}

void fluxppParser::ProgramContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<fluxppListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterProgram(this);
}

void fluxppParser::ProgramContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<fluxppListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitProgram(this);
}


std::any fluxppParser::ProgramContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<fluxppVisitor*>(visitor))
    return parserVisitor->visitProgram(this);
  else
    return visitor->visitChildren(this);
}

fluxppParser::ProgramContext* fluxppParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, fluxppParser::RuleProgram);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(34);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case fluxppParser::EOF:
      case fluxppParser::DROP:
      case fluxppParser::LET:
      case fluxppParser::CREATE:
      case fluxppParser::KEEP:
      case fluxppParser::REMOVE:
      case fluxppParser::CLAMP:
      case fluxppParser::SET:
      case fluxppParser::RENAME:
      case fluxppParser::FILL:
      case fluxppParser::ASSERT: {
        enterOuterAlt(_localctx, 1);
        setState(32);
        flux();
        break;
      }

      case fluxppParser::T__2:
      case fluxppParser::T__4:
      case fluxppParser::T__6:
      case fluxppParser::NOT:
      case fluxppParser::NULL_:
      case fluxppParser::TRUE:
      case fluxppParser::FALSE:
      case fluxppParser::ISO_DATETIME:
      case fluxppParser::ISO_DATE:
      case fluxppParser::ISO_TIME:
      case fluxppParser::NUMBER:
      case fluxppParser::STRING_LITERAL:
      case fluxppParser::ID: {
        enterOuterAlt(_localctx, 2);
        setState(33);
        single();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FluxContext ------------------------------------------------------------------

fluxppParser::FluxContext::FluxContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* fluxppParser::FluxContext::EOF() {
  return getToken(fluxppParser::EOF, 0);
}

std::vector<fluxppParser::StatementContext *> fluxppParser::FluxContext::statement() {
  return getRuleContexts<fluxppParser::StatementContext>();
}

fluxppParser::StatementContext* fluxppParser::FluxContext::statement(size_t i) {
  return getRuleContext<fluxppParser::StatementContext>(i);
}


size_t fluxppParser::FluxContext::getRuleIndex() const {
  return fluxppParser::RuleFlux;
}

void fluxppParser::FluxContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<fluxppListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFlux(this);
}

void fluxppParser::FluxContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<fluxppListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFlux(this);
}


std::any fluxppParser::FluxContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<fluxppVisitor*>(visitor))
    return parserVisitor->visitFlux(this);
  else
    return visitor->visitChildren(this);
}

fluxppParser::FluxContext* fluxppParser::flux() {
  FluxContext *_localctx = _tracker.createInstance<FluxContext>(_ctx, getState());
  enterRule(_localctx, 2, fluxppParser::RuleFlux);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(39);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 2145386496) != 0)) {
      setState(36);
      statement();
      setState(41);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(42);
    match(fluxppParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- SingleContext ------------------------------------------------------------------

fluxppParser::SingleContext::SingleContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

fluxppParser::ExprContext* fluxppParser::SingleContext::expr() {
  return getRuleContext<fluxppParser::ExprContext>(0);
}

tree::TerminalNode* fluxppParser::SingleContext::EOF() {
  return getToken(fluxppParser::EOF, 0);
}


size_t fluxppParser::SingleContext::getRuleIndex() const {
  return fluxppParser::RuleSingle;
}

void fluxppParser::SingleContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<fluxppListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterSingle(this);
}

void fluxppParser::SingleContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<fluxppListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitSingle(this);
}


std::any fluxppParser::SingleContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<fluxppVisitor*>(visitor))
    return parserVisitor->visitSingle(this);
  else
    return visitor->visitChildren(this);
}

fluxppParser::SingleContext* fluxppParser::single() {
  SingleContext *_localctx = _tracker.createInstance<SingleContext>(_ctx, getState());
  enterRule(_localctx, 4, fluxppParser::RuleSingle);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(44);
    expr(0);
    setState(45);
    match(fluxppParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatementContext ------------------------------------------------------------------

fluxppParser::StatementContext::StatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

fluxppParser::CreateContext* fluxppParser::StatementContext::create() {
  return getRuleContext<fluxppParser::CreateContext>(0);
}

fluxppParser::AssignmentContext* fluxppParser::StatementContext::assignment() {
  return getRuleContext<fluxppParser::AssignmentContext>(0);
}

fluxppParser::FilterContext* fluxppParser::StatementContext::filter() {
  return getRuleContext<fluxppParser::FilterContext>(0);
}

fluxppParser::Drop_rowContext* fluxppParser::StatementContext::drop_row() {
  return getRuleContext<fluxppParser::Drop_rowContext>(0);
}

fluxppParser::Drop_colContext* fluxppParser::StatementContext::drop_col() {
  return getRuleContext<fluxppParser::Drop_colContext>(0);
}

fluxppParser::ClampContext* fluxppParser::StatementContext::clamp() {
  return getRuleContext<fluxppParser::ClampContext>(0);
}

fluxppParser::SetContext* fluxppParser::StatementContext::set() {
  return getRuleContext<fluxppParser::SetContext>(0);
}

fluxppParser::RenameContext* fluxppParser::StatementContext::rename() {
  return getRuleContext<fluxppParser::RenameContext>(0);
}

fluxppParser::FillContext* fluxppParser::StatementContext::fill() {
  return getRuleContext<fluxppParser::FillContext>(0);
}

fluxppParser::Assert_statementContext* fluxppParser::StatementContext::assert_statement() {
  return getRuleContext<fluxppParser::Assert_statementContext>(0);
}


size_t fluxppParser::StatementContext::getRuleIndex() const {
  return fluxppParser::RuleStatement;
}

void fluxppParser::StatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<fluxppListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStatement(this);
}

void fluxppParser::StatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<fluxppListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStatement(this);
}


std::any fluxppParser::StatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<fluxppVisitor*>(visitor))
    return parserVisitor->visitStatement(this);
  else
    return visitor->visitChildren(this);
}

fluxppParser::StatementContext* fluxppParser::statement() {
  StatementContext *_localctx = _tracker.createInstance<StatementContext>(_ctx, getState());
  enterRule(_localctx, 6, fluxppParser::RuleStatement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(57);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case fluxppParser::CREATE: {
        enterOuterAlt(_localctx, 1);
        setState(47);
        create();
        break;
      }

      case fluxppParser::LET: {
        enterOuterAlt(_localctx, 2);
        setState(48);
        assignment();
        break;
      }

      case fluxppParser::KEEP: {
        enterOuterAlt(_localctx, 3);
        setState(49);
        filter();
        break;
      }

      case fluxppParser::DROP: {
        enterOuterAlt(_localctx, 4);
        setState(50);
        drop_row();
        break;
      }

      case fluxppParser::REMOVE: {
        enterOuterAlt(_localctx, 5);
        setState(51);
        drop_col();
        break;
      }

      case fluxppParser::CLAMP: {
        enterOuterAlt(_localctx, 6);
        setState(52);
        clamp();
        break;
      }

      case fluxppParser::SET: {
        enterOuterAlt(_localctx, 7);
        setState(53);
        set();
        break;
      }

      case fluxppParser::RENAME: {
        enterOuterAlt(_localctx, 8);
        setState(54);
        rename();
        break;
      }

      case fluxppParser::FILL: {
        enterOuterAlt(_localctx, 9);
        setState(55);
        fill();
        break;
      }

      case fluxppParser::ASSERT: {
        enterOuterAlt(_localctx, 10);
        setState(56);
        assert_statement();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AssignmentContext ------------------------------------------------------------------

fluxppParser::AssignmentContext::AssignmentContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* fluxppParser::AssignmentContext::LET() {
  return getToken(fluxppParser::LET, 0);
}

tree::TerminalNode* fluxppParser::AssignmentContext::ID() {
  return getToken(fluxppParser::ID, 0);
}

fluxppParser::ExprContext* fluxppParser::AssignmentContext::expr() {
  return getRuleContext<fluxppParser::ExprContext>(0);
}

tree::TerminalNode* fluxppParser::AssignmentContext::ENDLINE() {
  return getToken(fluxppParser::ENDLINE, 0);
}


size_t fluxppParser::AssignmentContext::getRuleIndex() const {
  return fluxppParser::RuleAssignment;
}

void fluxppParser::AssignmentContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<fluxppListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterAssignment(this);
}

void fluxppParser::AssignmentContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<fluxppListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitAssignment(this);
}


std::any fluxppParser::AssignmentContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<fluxppVisitor*>(visitor))
    return parserVisitor->visitAssignment(this);
  else
    return visitor->visitChildren(this);
}

fluxppParser::AssignmentContext* fluxppParser::assignment() {
  AssignmentContext *_localctx = _tracker.createInstance<AssignmentContext>(_ctx, getState());
  enterRule(_localctx, 8, fluxppParser::RuleAssignment);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(59);
    match(fluxppParser::LET);
    setState(60);
    match(fluxppParser::ID);
    setState(61);
    match(fluxppParser::T__0);
    setState(62);
    expr(0);
    setState(63);
    match(fluxppParser::ENDLINE);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- CreateContext ------------------------------------------------------------------

fluxppParser::CreateContext::CreateContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* fluxppParser::CreateContext::CREATE() {
  return getToken(fluxppParser::CREATE, 0);
}

tree::TerminalNode* fluxppParser::CreateContext::ID() {
  return getToken(fluxppParser::ID, 0);
}

tree::TerminalNode* fluxppParser::CreateContext::AS() {
  return getToken(fluxppParser::AS, 0);
}

fluxppParser::ExprContext* fluxppParser::CreateContext::expr() {
  return getRuleContext<fluxppParser::ExprContext>(0);
}

tree::TerminalNode* fluxppParser::CreateContext::ENDLINE() {
  return getToken(fluxppParser::ENDLINE, 0);
}


size_t fluxppParser::CreateContext::getRuleIndex() const {
  return fluxppParser::RuleCreate;
}

void fluxppParser::CreateContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<fluxppListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterCreate(this);
}

void fluxppParser::CreateContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<fluxppListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitCreate(this);
}


std::any fluxppParser::CreateContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<fluxppVisitor*>(visitor))
    return parserVisitor->visitCreate(this);
  else
    return visitor->visitChildren(this);
}

fluxppParser::CreateContext* fluxppParser::create() {
  CreateContext *_localctx = _tracker.createInstance<CreateContext>(_ctx, getState());
  enterRule(_localctx, 10, fluxppParser::RuleCreate);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(65);
    match(fluxppParser::CREATE);
    setState(66);
    match(fluxppParser::ID);
    setState(67);
    match(fluxppParser::AS);
    setState(68);
    expr(0);
    setState(69);
    match(fluxppParser::ENDLINE);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FilterContext ------------------------------------------------------------------

fluxppParser::FilterContext::FilterContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* fluxppParser::FilterContext::KEEP() {
  return getToken(fluxppParser::KEEP, 0);
}

tree::TerminalNode* fluxppParser::FilterContext::IF() {
  return getToken(fluxppParser::IF, 0);
}

fluxppParser::ExprContext* fluxppParser::FilterContext::expr() {
  return getRuleContext<fluxppParser::ExprContext>(0);
}

tree::TerminalNode* fluxppParser::FilterContext::ENDLINE() {
  return getToken(fluxppParser::ENDLINE, 0);
}


size_t fluxppParser::FilterContext::getRuleIndex() const {
  return fluxppParser::RuleFilter;
}

void fluxppParser::FilterContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<fluxppListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFilter(this);
}

void fluxppParser::FilterContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<fluxppListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFilter(this);
}


std::any fluxppParser::FilterContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<fluxppVisitor*>(visitor))
    return parserVisitor->visitFilter(this);
  else
    return visitor->visitChildren(this);
}

fluxppParser::FilterContext* fluxppParser::filter() {
  FilterContext *_localctx = _tracker.createInstance<FilterContext>(_ctx, getState());
  enterRule(_localctx, 12, fluxppParser::RuleFilter);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(71);
    match(fluxppParser::KEEP);
    setState(72);
    match(fluxppParser::IF);
    setState(73);
    expr(0);
    setState(74);
    match(fluxppParser::ENDLINE);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Drop_rowContext ------------------------------------------------------------------

fluxppParser::Drop_rowContext::Drop_rowContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* fluxppParser::Drop_rowContext::DROP() {
  return getToken(fluxppParser::DROP, 0);
}

tree::TerminalNode* fluxppParser::Drop_rowContext::IF() {
  return getToken(fluxppParser::IF, 0);
}

fluxppParser::ExprContext* fluxppParser::Drop_rowContext::expr() {
  return getRuleContext<fluxppParser::ExprContext>(0);
}

tree::TerminalNode* fluxppParser::Drop_rowContext::ENDLINE() {
  return getToken(fluxppParser::ENDLINE, 0);
}


size_t fluxppParser::Drop_rowContext::getRuleIndex() const {
  return fluxppParser::RuleDrop_row;
}

void fluxppParser::Drop_rowContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<fluxppListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDrop_row(this);
}

void fluxppParser::Drop_rowContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<fluxppListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDrop_row(this);
}


std::any fluxppParser::Drop_rowContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<fluxppVisitor*>(visitor))
    return parserVisitor->visitDrop_row(this);
  else
    return visitor->visitChildren(this);
}

fluxppParser::Drop_rowContext* fluxppParser::drop_row() {
  Drop_rowContext *_localctx = _tracker.createInstance<Drop_rowContext>(_ctx, getState());
  enterRule(_localctx, 14, fluxppParser::RuleDrop_row);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(76);
    match(fluxppParser::DROP);
    setState(77);
    match(fluxppParser::IF);
    setState(78);
    expr(0);
    setState(79);
    match(fluxppParser::ENDLINE);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Drop_colContext ------------------------------------------------------------------

fluxppParser::Drop_colContext::Drop_colContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* fluxppParser::Drop_colContext::REMOVE() {
  return getToken(fluxppParser::REMOVE, 0);
}

std::vector<tree::TerminalNode *> fluxppParser::Drop_colContext::ID() {
  return getTokens(fluxppParser::ID);
}

tree::TerminalNode* fluxppParser::Drop_colContext::ID(size_t i) {
  return getToken(fluxppParser::ID, i);
}

tree::TerminalNode* fluxppParser::Drop_colContext::ENDLINE() {
  return getToken(fluxppParser::ENDLINE, 0);
}

tree::TerminalNode* fluxppParser::Drop_colContext::IF() {
  return getToken(fluxppParser::IF, 0);
}

fluxppParser::ExprContext* fluxppParser::Drop_colContext::expr() {
  return getRuleContext<fluxppParser::ExprContext>(0);
}


size_t fluxppParser::Drop_colContext::getRuleIndex() const {
  return fluxppParser::RuleDrop_col;
}

void fluxppParser::Drop_colContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<fluxppListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDrop_col(this);
}

void fluxppParser::Drop_colContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<fluxppListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDrop_col(this);
}


std::any fluxppParser::Drop_colContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<fluxppVisitor*>(visitor))
    return parserVisitor->visitDrop_col(this);
  else
    return visitor->visitChildren(this);
}

fluxppParser::Drop_colContext* fluxppParser::drop_col() {
  Drop_colContext *_localctx = _tracker.createInstance<Drop_colContext>(_ctx, getState());
  enterRule(_localctx, 16, fluxppParser::RuleDrop_col);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(81);
    match(fluxppParser::REMOVE);
    setState(82);
    match(fluxppParser::ID);
    setState(87);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == fluxppParser::T__1) {
      setState(83);
      match(fluxppParser::T__1);
      setState(84);
      match(fluxppParser::ID);
      setState(89);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(92);
    _errHandler->sync(this);
